
syntax = "proto3";

option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/roles";
import "accounts/v1alpha1/accounts.proto";

package accounts.v1alpha1.roles.v1;


/*
    ROLES
*/



message CreateRoleRequest {
    string name = 1;
    string description = 2;
    string project_id = 3;
    string organization_id = 4;
    string type_permission = 5;
    repeated uint32 permission_ids = 6;
}


message UpdateRoleRequest {
    string rol_id = 3;
    CreateRoleRequest rol = 2;
}

message GetOneRoleRequest {
    string rol_id = 2;
}

message GetOneRoleResponse{
    string id = 1;
    string name = 2;
    repeated Permission permissions = 5;
    bool is_admin = 6; 
    string organization_id = 8;
    string project_id = 9;
}

message DeleteRoleRequest {
    string rol_id = 2;
}

message ListRolesRequest {
    string project_id = 3;
    string organization_id = 4;
}   
/* 
    Responses
*/
message ListRolesResponse {
    repeated Role roles = 1;
}

message CreateRoleResponse {
    string msg = 1;
    string id = 3;
}

message UpdateRoleResponse {
    string msg = 1;
}

message DeleteRoleResponse {
    string msg = 1;
}

/*
    GET ROLES BY USER 
*/

message GetRolesByUserRequest {
    string user_id = 1;
}

message GetRolesByUserResponse {
    repeated Organization organization = 1;
    repeated Project project = 2;
}

/*TERCEROS, PROXIMO A COMMON */


/*
    ROLES ORG BY USER
*/

message GetRolesByOrgUserRequest {
    string organization_id = 1;
    string project_id = 2;
    uint32 user_id = 3;
}

message GetRolesByOrgUserResponse {
    repeated Organization organization = 1;
    repeated Project project = 2;
}

